# visus

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  vcpkg.json
res/shaders/: volume.frag  volume.vert
src/: App.cpp  App.hpp  CMakeLists.txt  GLFWInput.cpp  GLFWInput.hpp  InputHandler.cpp  InputHandler.hpp  InputManager.cpp  InputManager.hpp  UI.cpp  UIManager.cpp  UIManager.hpp  Window.cpp  Window.hpp  WindowInterface.hpp  main.cpp
src/app/: App.cpp  App.hpp
src/core/: GLFWInput.cpp  GLFWInput.hpp  InputHandler.hpp  InputManager.cpp  InputManager.hpp  Window.cpp  Window.hpp
src/graphics/: Camera.cpp  Camera.hpp  IBO.cpp  IBO.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture3D.cpp  Texture3D.hpp  VAO.cpp  VAO.hpp  VBLayout.hpp  VBO.cpp  VBO.hpp  VolumeData.cpp  VolumeData.hpp  VolumeRenderer.cpp  VolumeRenderer.hpp
src/platform/windows/: Window.cpp  Window.hpp
src/ui/: UI.hpp
